--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <header>Minha Lista de Tarefas</header>
   <p id="funcionamento">Clique duas vezes em um item para marcá-lo como completo</p>
   <input type="text" id="texto-tarefa" placeholder="Digite aqui a nova tarefa..."/>
-  <ol id="lista-tarefas">
-
-  </ol>
   <button id="criar-tarefa">Criar Tarefa</button>
+  <ol id="lista-tarefas">
+  </ol>
+  <button id="apaga-tudo">Apagar Lista</button>
   <script src="script.js  "></script>
 </body>
 </html>
