--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </ol>
   <button id="apaga-tudo">Apagar Lista</button>
   <button id="remover-finalizados">Remover Finalizados</button>
+  <button id="remover-selecionado">Remover Selecionado</button>
   <script src="script.js  "></script>
 </body>
 </html>
