implementa o botao Mover Acima

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <button id="apaga-tudo">Apagar Lista</button>
   <button id="remover-finalizados">Remover Finalizados</button>
   <button id="remover-selecionado">Remover Selecionado</button>
+  <button id="mover-cima">Mover Acima</button>
+  <button id="mover-baixo">Mover Abaixo</button>
   <script src="script.js  "></script>
 </body>
 </html>
