--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <button id="remover-selecionado">Remover Selecionado</button>
   <button id="mover-cima">Mover Acima</button>
   <button id="mover-baixo">Mover Abaixo</button>
+  <button id="salvar-tarefas">Salvar</button>
   <script src="script.js  "></script>
 </body>
 </html>
